# open-french-law-rag-pipeline

./: .env.example  .gitignore  LICENSE  README.md  ask.py  ingest.py  pyproject.toml
const/: __init__.py
